# nix-minimal

./: .gitignore  CHANGELOG.md  README.md  configuration.nix  default.nix  nix-minimal.cabal  release.nix  result-2
app/: Dockerfile  Main.hs
