cabal-version:      2.4
name:               nix-minimal
version:            0.1.0.0
author:             noah
maintainer:         slussnoah@gmail.com
extra-source-files: CHANGELOG.md

executable nix-minimal
    main-is:          Main.hs
    build-depends:    base
                    , servant-server
                    , warp
    hs-source-dirs:   app
    default-language: Haskell2010
